--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.9.12",
+    "leaflet": "^1.9.4",
+    "leaflet-geotiff": "^0.2.0",
     "react": "18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-native": "0.75.4",
+    "react-native-fs": "^2.20.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^3.35.0",
     "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-virtualized-view": "^1.0.0",
-    "react-native-webview": "^13.12.3"
+    "react-native-webview": "^13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
